# CompressNet

./: README.md
artifacts/embeddings/: centroid_embeddings.npy  quantized_centroid.npy
artifacts/saved_models/clustering_models/: quantized_kmeans.pkl
artifacts/saved_models/tiny-basic-02_3/: best_model.keras  best_sizemae.keras  best_vloss.keras  config.toml  encoder_quant_div.tflite  results.txt
dataset/: 1-l.txt  10-l.txt  100-l.txt  1001-l.txt  1002-l.txt  1003-l.txt  1004-l.txt  1005-l.txt  1006-l.txt  1007-l.txt  1008-l.txt  1009-l.txt  101-l.txt  1010-l.txt  1011-l.txt  1012-l.txt  1013-l.txt  1014-l.txt  1015-l.txt  1016-l.txt  1017-l.txt  1018-l.txt  1019-l.txt  102-l.txt  1020-l.txt  1021-l.txt  1022-l.txt  1023-l.txt  1024-l.txt  1025-l.txt  1026-l.txt  1027-l.txt  1028-l.txt  1029-l.txt  103-l.txt  1030-l.txt  1031-l.txt  1032-l.txt  1033-l.txt  1034-l.txt  (+3883 more)
src/: 01-a-split-threshold.py  01-b-Huff.py  01-c-oklib3.py  02-a-dataset.py  02-b-train.py  03-tflite_converter.py  04-a-tflite_cluster.py  04-b-centroid_outputs.py  05-tflite_infer.py
uv-3.9/: pyproject.toml
